# Medical-Report-Analyzer

./: README.md  check_chromadb_import.py  pyproject.toml  requirements.txt  typesense.ipynb
data/text_files/: blood_sample.txt
data/vector_store/: index.faiss  index.pkl
notebook/: document.ipynb
